# EasyJupyter

./: .gitignore  EasyJupyter.py  LICENSE.txt  README.md  dev_notes.md  example.py  example_notebook.ipynb  h.ipynb  importer.py  main_example.py  pyproject.toml  test_example.ipynb  todo.md
.github/workflows/: release.yaml
EasyJupyter/: __init__.py  cli.py  loader.py  watcher.py
Example/: example.py  example_notebook.ipynb
example_nested_project/: main.py  yourProjectConfig.py
example_nested_project/nested/: nested_notebook.ipynb
src/EasyJupyter/: __init__.py  cli.py  loader.py  utils.py  watcher.py
