[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "EasyJupyter"
version = "0.1.2" # NOTE: This is a required field, leave it as is, no need to change it, the Github workflow will automatically take care of version using the tag you set for commits!
description = "EasyJupyter allows you to seamlessly integrate your Jupyter Notebook code into Python projects or other notebooks. It transforms your notebooks into reusable modules, enabling you to leverage their interactive development environment while maintaining their native display for documentation and collaboration."
readme = "README.md"
license = "MIT"
authors = ["Tony Avis"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
packages = [ # Tell poetry where to find the source code
    { include = "EasyJupyter", from = "src" }
]
repository = "https://github.com/t20e/EasyJupyter"

[tool.poetry.urls]
"Issues" = "https://github.com/t20e/EasyJupyter/issues"

[tool.poetry.dependencies]
python = "^3.12"
nbformat = "*"
rich = "*"
watchdog = "*"

[tool.poetry.scripts]
# This maps the 'easyjupyter' terminal command to the main() function in cli.py
easyjupyter = "EasyJupyter.cli:main"