[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "EasyJupyter"
version = "0.1.5" # NOTE: This is a required field, leave it as is, no need to change it, the Github workflow will automatically take care of version using the tag you set for commits!

description = "EasyJupyter allows you to effortlessly integrate your Jupyter Notebook code into any Python project or other notebooks."
readme = "README.md"

license = "MIT" 
authors = [{ name = "Tony Avis" }]

requires-python = ">=3.12"
dynamic = ["classifiers"] # allow Poetry to automatically add Python version tags

dependencies = [
    "nbformat",
    "rich",
    "watchdog",
]

[project.urls]
"Repository" = "https://github.com/t20e/EasyJupyter"
"Issues" = "https://github.com/t20e/EasyJupyter/issues"

[project.scripts]
# This maps the 'easyjupyter' terminal command to the main() function in cli.py
easyjupyter = "EasyJupyter.cli:main"

[tool.poetry]
packages = [
    # Tell poetry where to find the source code
    { include = "EasyJupyter", from = "src" },
]